Updated version to 3.0.1

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -130,7 +130,7 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
           <div class="collapsible-body">
             <p>
-              <b>Version:</b> 3.0.0<br/>
+              <b>Version:</b> 3.0.1<br/>
               <b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
               <b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
               <b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -170,6 +170,10 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
           <div class="collapsible-body">
             <p>
+              <b>Version 3.0.1</b><br/>
+              - Added a couple of tags<br/>
+              - Fixed minor bugs<br/>
+              - Removed tag libs, a moudle is used instead<br/>
               <b>Version 3.0.0</b><br/>
               - Added Vorbis comments(To support FLAC tagging)<br/>
               - Added HIFI(FLAC) quality (Opt-IN in settings)<br/>
@@ -412,7 +416,7 @@
     <div class="jumbotron">
       <div class="container">
         <div class="clear-nav">
-          <div class="logo"><a href="#">Deezloader <sup>3.0</sup></a></div>
+          <div class="logo"><a href="#">Deezloader <sup>3.0.1</sup></a></div>
           <div class="navigation">
             <ul class="right">
               <li>
