Fixed dot at end and added %year%
- Fixed dot at end of album/playlist, Windows users can't remove it.
- Added %year%

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -62,14 +62,14 @@
       <div class="input-field col s12">
         <i class="material-icons prefix">label</i>
         <input type="text" id="modal_settings_input_trackNameTemplate"/>
-        <label for="modal_settings_input_trackNameTemplate">Track names <i class="material-icons valignicon tiny tooltipped" data-position="right" data-delay="50" data-tooltip="Supported variables are: %number%, %artist%, %title% and %album%">info_outline</i></label>
+        <label for="modal_settings_input_trackNameTemplate">Track names <i class="material-icons valignicon tiny tooltipped" data-position="right" data-delay="50" data-tooltip="Supported variables are: %number%, %year%, %artist%, %title% and %album%">info_outline</i></label>
       </div>
     </div>
     <div class="row">
       <div class="input-field col s12">
         <i class="material-icons prefix">label</i>
         <input type="text" id="modal_settings_input_playlistTrackNameTemplate"/>
-        <label for="modal_settings_input_playlistTrackNameTemplate">Playlist track names <i class="material-icons valignicon tiny tooltipped" data-position="right" data-delay="50" data-tooltip="Supported variables are: %number%, %artist%, %title% and %album%">info_outline</i></label>
+        <label for="modal_settings_input_playlistTrackNameTemplate">Playlist track names <i class="material-icons valignicon tiny tooltipped" data-position="right" data-delay="50" data-tooltip="Supported variables are: %number%, %year%, %artist%, %title% and %album%">info_outline</i></label>
       </div>
     </div>
     <div class="row">
