--- a/app/public/index.html
+++ b/app/public/index.html
@@ -142,8 +142,8 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">feedback</i>Feedback</div>
           <div class="collapsible-body">
             <p>
-              Do you have some feedback or want to ask for some new features? The official subreddit is <a target="_blank"
-                                                                                                           href="https://www.reddit.com/r/deezloader/">/r/deezloader</a>.
+              Do you have some feedback or want to ask for some new features? The official github page is <a target="_blank"
+                                                                                                           href="https://github.com/ExtendLord/DeezLoader-Reborn">/ExtendLord/DeezLoader-Reborn</a>.
             </p>
           </div>
         </li>
@@ -151,7 +151,7 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">bug_report</i>Bugs</div>
           <div class="collapsible-body">
             <p>
-              If you experience any bugs, please open a new issue in <a href="https://github.com/ExtendLord/deezloader-app">this
+              If you experience any bugs, please open a new issue in <a href="https://github.com/ExtendLord/DeezLoader-Reborn">this
               repository</a>.
             </p>
           </div>
@@ -254,6 +254,7 @@
             <p>Thanks to the following contributors for fixing bugs and improving this application. <br> <br>
               <a href="https://www.reddit.com/user/Blind-Mute">Blind-Mute</a> <br>
               <a href="https://gitlab.com/Persei08">Persei08</a> <br>
+              <a href="https://github.com/Uukrull">Uukrull</a> <br>
             </p>
           </div>
         </li>
