Updated Version to 3.0.2

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -140,7 +140,7 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
           <div class="collapsible-body">
             <p>
-              <b>Version:</b> 3.0.1<br/>
+              <b>Version:</b> 3.0.2<br/>
               <b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
               <b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
               <b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -180,6 +180,14 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
           <div class="collapsible-body">
             <p>
+              <b>Version 3.0.2</b><br/>
+              - Fixed crashes when songs could not be downloaded<br/>
+              - Added bpm tag<br/>
+              - Added logging system(Fixed same song downloading and some songs not being available)<br/>
+              - Fixed corruped FLAC's<br/>
+              - Added %year%<br/>
+              - Fixed dots at end<br/>
+              - Fixed undefined genre<br/>
               <b>Version 3.0.1</b><br/>
               - Added a couple of tags<br/>
               - Fixed minor bugs<br/>
@@ -427,7 +435,7 @@
     <div class="jumbotron">
       <div class="container">
         <div class="clear-nav">
-          <div class="logo"><a href="#">Deezloader <sup>3.0.1</sup></a></div>
+          <div class="logo"><a href="#">Deezloader <sup>3.0.2</sup></a></div>
           <div class="navigation">
             <ul class="right">
               <li>
