--- a/app/public/index.html
+++ b/app/public/index.html
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="input-field col s12">
           <input class="white-text" type="text" id="modal_login_input_username"/>
-          <label for="modal_login_input_username">Username</label>
+          <label for="modal_login_input_username">Email</label>
         </div>
     </div>
     <div class="row">
@@ -46,7 +46,12 @@
     </div>
     <div class="row">
       <a href="#" class="modal-close waves-effect waves-light btn" id="modal_login_btn_login">Log in</a>
+      <span style="right:25%;position:fixed;">
+        <input class="white-text" type="checkbox" id="modal_login_input_autologin"/>
+        <label class="white-text" for="modal_login_input_autologin">Auto login</label>
+      </span>
     </div>
+
   <footer class="page-footer hide-on-small-and-down" style="width: 100%;bottom:0;position: fixed;left: 0;height: 50px;">
     <div class="footer-copyright">
       <div class="container">
