Updated Version to 3.0.4 and added donation

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -145,7 +145,7 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
           <div class="collapsible-body">
             <p>
-              <b>Version:</b> 3.0.3<br/>
+              <b>Version:</b> 3.0.4<br/>
               <b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
               <b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
               <b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -185,6 +185,14 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
           <div class="collapsible-body">
             <p>
+              <b>Version 3.0.4</b><br/>
+              - Fixed download crashes<br/>
+              - Fixed failed tracks when downloading some albums and playlists<br/>
+              - Fixed folder does not exists crash<br/>
+              - Improved tags<br/>
+              - Changed album cover dir to the albums folder<br/>
+              - Changed settings style<br/>
+              - Fixed login crash when there is no connection<br/> 
               <b>Version 3.0.3</b><br/>
               - Added auto login<br/>
               - Added MP3 Fallback<br/>
@@ -445,7 +453,7 @@
     <div class="jumbotron">
       <div class="container">
         <div class="clear-nav">
-          <div class="logo"><a href="#">Deezloader <sup>3.0.3</sup></a></div>
+          <div class="logo"><a href="#">Deezloader <sup>3.0.4</sup></a></div>
           <div class="navigation">
             <ul class="right">
               <li>
