Updated Version to 3.0.5

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -145,7 +145,7 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
           <div class="collapsible-body">
             <p>
-              <b>Version:</b> 3.0.4<br/>
+              <b>Version:</b> 3.0.5<br/>
               <b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
               <b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
               <b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -157,8 +157,8 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">feedback</i>Feedback</div>
           <div class="collapsible-body">
             <p>
-              Do you have some feedback or want to ask for some new features? The official github page is <a target="_blank"
-                                                                                                           href="https://github.com/ExtendLord/DeezLoader-Reborn">/ExtendLord/DeezLoader-Reborn</a>.
+              Do you have some feedback or want to ask for some new features? The official gitlab page is <a target="_blank"
+                                                                                                           href="https://gitlab.com/ExtendLord/DeezLoader-Reborn">/ExtendLord/DeezLoader-Reborn</a>.
             </p>
           </div>
         </li>
@@ -166,7 +166,7 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">bug_report</i>Bugs</div>
           <div class="collapsible-body">
             <p>
-              If you experience any bugs, please open a new issue in <a href="https://github.com/ExtendLord/DeezLoader-Reborn">this
+              If you experience any bugs, please open a new issue in <a href="https://gitlab.com/ExtendLord/DeezLoader-Reborn">this
               repository</a>.
             </p>
           </div>
@@ -185,6 +185,10 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
           <div class="collapsible-body">
             <p>
+              <b>Version 3.0.5</b><br/>
+              - Changed repo from github to gitlab<br/>
+              - Fixed Login error for Deezer Family Accounts<br/>
+              - Fixed composer tag<br/>
               <b>Version 3.0.4</b><br/>
               - Fixed download crashes<br/>
               - Fixed failed tracks when downloading some albums and playlists<br/>
@@ -453,7 +457,7 @@
     <div class="jumbotron">
       <div class="container">
         <div class="clear-nav">
-          <div class="logo"><a href="#">Deezloader <sup>3.0.4</sup></a></div>
+          <div class="logo"><a href="#">Deezloader <sup>3.0.5</sup></a></div>
           <div class="navigation">
             <ul class="right">
               <li>
