--- a/app/public/index.html
+++ b/app/public/index.html
@@ -165,7 +165,7 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
           <div class="collapsible-body">
             <p>
-              <b>Version:</b> 3.0.6<br/>
+              <b>Version:</b> 3.0.7<br/>
               <b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
               <b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
               <b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -205,6 +205,9 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
           <div class="collapsible-body">
             <p>
+              <b>Version 3.0.7</b><br/>
+              - Fixed crash when composer or publisher tag is not available<br/>
+              - Added version to the update notifier<br/>
               <b>Version 3.0.6</b><br/>
               - Login page will only appear for those who need it<br/>
               - Added composer, publisher and copyright tag<br/>
@@ -482,7 +485,7 @@
     <div class="jumbotron">
       <div class="container">
         <div class="clear-nav">
-          <div class="logo"><a href="#">Deezloader <sup>3.0.6</sup></a></div>
+          <div class="logo"><a href="#">Deezloader <sup>3.0.7</sup></a></div>
           <div class="navigation">
             <ul class="right">
               <li>
