Updated version to 3.0.8 and added support for Android

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -162,7 +162,7 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
           <div class="collapsible-body">
             <p>
-              <b>Version:</b> 3.0.7<br/>
+              <b>Version:</b> 3.0.8<br/>
               <b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
               <b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
               <b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -202,6 +202,14 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
           <div class="collapsible-body">
             <p>
+              <b>Version 3.0.8</b><br/>
+              - Fixed initializing stuck<br/>
+              - Removed Diacritics remover<br/>
+              - Changed name fixer<br/>
+              - Added barcode for FLAC<br/>
+              - Added support for Android<br/>
+              - Added web server http://localhost:1730<br/>
+              - Updated libraries<br/>
               <b>Version 3.0.7</b><br/>
               - Fixed crash when composer or publisher tag is not available<br/>
               - Added version to the update notifier<br/>
@@ -482,7 +490,7 @@
     <div class="jumbotron">
       <div class="container">
         <div class="clear-nav">
-          <div class="logo"><a href="#">Deezloader <sup>3.0.7</sup></a></div>
+          <div class="logo"><a href="#">Deezloader <sup>3.0.8</sup></a></div>
           <div class="navigation">
             <ul class="right">
               <li>
