--- a/app/public/index.html
+++ b/app/public/index.html
@@ -335,12 +335,11 @@
           <div class="collapsible-header waves-effect"><i class="material-icons">copyright</i>License</div>
           <div class="collapsible-body">
             <p>
-              <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-                <img alt="Creative Commons License" style="border-width:0"
-                     src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"/>
+              <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.en.html">
+                <img alt="GNU General Public License" style="border-width:0"
+                     src="https://www.gnu.org/graphics/gplv3-127x51.png"/>
               </a><br/>
-              This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative
-              Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+              This work is licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License 3.0</a>.
             </p>
           </div>
         </li>
