Updated version to 3.0.9 and improved update notifier

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -181,7 +181,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.0.8<br/>
+							<b>Version:</b> 3.0.9<br/>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
 							<b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -220,6 +220,15 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.0.9</b><br/>
+							- Added synced and unsynced lyrics, album name option and number playlist by album option.<br/>
+							- Added pad track number(01,02)<br/>
+							- Fixed dots at end of folders when album/arist folder is enabled<br/>
+							- Fixed ENOENT when folder does not exists<br/>
+							- Fixed alternative track downloading, it will only download it if it will fail to download the non alternative one.<br/>
+							- Changed license to GNU GPL 3.0<br/>
+							- Changed all spaces in the JS code to tabs<br/>
+							- Improved update notifier, it will redirect you to the download page<br/>
 							<b>Version 3.0.8</b><br/>
 							- Fixed initializing stuck<br/>
 							- Removed Diacritics remover<br/>
@@ -507,7 +516,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.0.8</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <sup>3.0.9</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
