Fixed default android path, fixed album's %year% and added 1400p

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -118,7 +118,8 @@
 					<option value="/500x500.jpg">500x500</option>
 					<option value="/800x800.jpg">800x800</option>
 					<option value="/1000x1000.jpg">1000x1000</option>
-					<option value="/1200x1200.jpg" selected>1200x1200</option>
+					<option value="/1200x1200.jpg">1200x1200</option>
+					<option value="/1400x1400.jpg" selected>1400x1400</option>
 				</select>
 				<label for="modal_settings_select_artworkSize">Artwork size</label>
 			</div>
