--- a/app/public/index.html
+++ b/app/public/index.html
@@ -182,7 +182,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.0.9<br/>
+							<b>Version:</b> 3.0.10<br/>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
 							<b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -221,6 +221,22 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.0.10</b><br/>
+							- Improved downloading and decrypting system<br/>
+							- Improved update notifier<br/>
+							- Added 1400p artworks<br/>
+							- Alternative tracks will take the original tracks tag if possible<br/>
+							- Removed Disc folders, tracks of albums with discs will be combined into one<br/>
+							- Removed 'dev' from the update notifier<br/>
+							- Artist folders are now named by the artist of the albums<br/>
+							- Fixed album name option when artist option is checked<br/>
+							- Fixed android's home location(It had two slashes)<br/>
+							- Fixed default android path<br/>
+							- Fixed album's %year%<br/>
+							- Fixed downloading issues for non supported countries<br/>
+							- Fixed ENOENT crashes caused by queues<br/>
+							- Fixed a minor bug in the alternative track code<br/>
+							- Added a backup server for update notifier<br/>
 							<b>Version 3.0.9</b><br/>
 							- Added synced and unsynced lyrics, album name option and number playlist by album option.<br/>
 							- Added pad track number(01,02)<br/>
@@ -517,7 +533,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.0.9</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <sup>3.0.10</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
