Updated version to 3.0.11

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -182,7 +182,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.0.10<br/>
+							<b>Version:</b> 3.0.11<br/>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
 							<b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -221,6 +221,14 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.0.11</b><br/>
+							- Fixed artwork duplicate for two tracks with the same name<br/>
+							- Added tags: mixer, author, writer, engineer and producer<br/>
+							- Fixed copyright tag when it is not available<br/>
+							- Removed performer tag from FLAC<br/>
+							- Removed label tag and changed from track date to album/ep/single date tag<br/>
+							- Restored decrypting system due to mp3 being corrupt<br/>
+							- Fixed crash when downloading a track with album folder enabled<br/>
 							<b>Version 3.0.10</b><br/>
 							- Improved downloading and decrypting system<br/>
 							- Improved update notifier<br/>
@@ -533,7 +541,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.0.10</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <sup>3.0.11</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
