Fixed download freeze(metadata image issues) and added record type to the search section's albums and artist's albums

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -624,6 +624,7 @@
 						<td>Album</td>
 						<td>Artist</td>
 						<td>Songs</td>
+						<td>Type</td>
 						<td><!--space--></td>
 						<td><!--download_link--></td>
 					</tr>
