--- a/app/public/index.html
+++ b/app/public/index.html
@@ -182,7 +182,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.0.11<br/>
+							<b>Version:</b> 3.0.12<br/>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
 							<b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -221,6 +221,13 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.0.12</b><br/>
+							- Added request retry, connections will retry if fail<br/>
+							- Added record type to the search section(Results of Albums and Artists albums)<br/>
+							- Fixed dots at end of playlists<br/>
+							- Fixed download freezes (metadata image issues)<br/>
+							- Removed the title bar from the web GUI<br/>
+							- Improved download speed and decryption system<br/>
 							<b>Version 3.0.11</b><br/>
 							- Fixed artwork duplicate for two tracks with the same name<br/>
 							- Added tags: mixer, author, writer, engineer and producer<br/>
@@ -541,7 +548,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.0.11</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <sup>3.0.12</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
