--- a/app/public/index.html
+++ b/app/public/index.html
@@ -108,7 +108,7 @@
 			<div class="input-field col s12">
 				<i class="material-icons prefix">label</i>
 				<input type="text" id="modal_settings_input_albumNameTemplate"/>
-				<label for="modal_settings_input_albumNameTemplate">Album names <i class="material-icons valignicon tiny tooltipped" data-position="right" data-delay="50" data-tooltip="Supported variables are: %year%, %artist% and %album%">info_outline</i></label>
+				<label for="modal_settings_input_albumNameTemplate">Album names <i class="material-icons valignicon tiny tooltipped" data-position="right" data-delay="50" data-tooltip="Supported variables are: %year%, %artist%, %type% and %album%">info_outline</i></label>
 			</div>
 		</div>
 		<div class="row">
