Updated version to 3.0.13 and Improved MP3 tags again

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -182,7 +182,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.0.12<br/>
+							<b>Version:</b> 3.0.13<br/>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
 							<b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -221,6 +221,11 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.0.13</b><br/>
+							- Fixed timeout of the download system<br/>
+							- Fixed images for tracks<br/>
+							- Fixed and Improved MP3 tags<br/>
+							- Added %type%(Record type) for album name format<br/>
 							<b>Version 3.0.12</b><br/>
 							- Added request retry, connections will retry if fail<br/>
 							- Added record type to the search section(Results of Albums and Artists albums)<br/>
@@ -548,7 +553,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.0.12</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <sup>3.0.13</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
