Updated version to 3.0.14

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -182,7 +182,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.0.13<br/>
+							<b>Version:</b> 3.0.14<br/>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
 							<b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -221,6 +221,9 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.0.14</b><br/>
+							- Login is required due to Deezer's patch(Crashes when downloading anything)<br/>
+							- Added BPM tag<br/>
 							<b>Version 3.0.13</b><br/>
 							- Fixed timeout of the download system<br/>
 							- Fixed images for tracks<br/>
@@ -553,7 +556,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.0.13</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <sup>3.0.14</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
