Added multi url support, seperated by ';'

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -720,7 +720,7 @@
 		<div id="tab_url">
 			<form id="tab_url_form_url" class="row">
 				<div class="inline-input-group">
-					<input type="text" id="song_url" class="input" placeholder="Song/Playlist/Album/Artist URL">
+					<input type="text" id="song_url" class="input" placeholder="Song/Playlist/Album/Artist URL, seperated by ';'">
 					<button class="btn btn-large btn-flat indigo white-text">Download</button>
 				</div>
 			</form>
