Updated version to 3.0.15

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -167,7 +167,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.0.14<br/>
+							<b>Version:</b> 3.0.15<br/>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
 							<b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
@@ -206,6 +206,16 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.0.15</b><br/>
+							- Added replaygain tag<br/>
+							- Added logout option<br/>
+							- Added signup option<br/>
+							- Added multi url support, seperated by ';'<br/>
+							- Fixed incomplete audio files<br/>
+							- Fixed track fallback(alternative property)(Deezer's API update)<br/>
+							- Improved logging system<br/>
+							- Improved pad numbers<br/>
+							- Removed init page since it is not used anymore<br/>
 							<b>Version 3.0.14</b><br/>
 							- Login is required due to Deezer's patch(Crashes when downloading anything)<br/>
 							- Added BPM tag<br/>
@@ -541,7 +551,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.0.14</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <sup>3.0.15</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
